# BepInEx.GUI

./: .gitignore  BepInEx.Gui.sln  Cargo.toml  LICENSE  README  README.md  github-release.yml
.cargo/: config
.github/workflows/: github-release.yml
BepInEx.GUI/: App.axaml  App.axaml.cs  BepInEx.GUI.csproj  Debug.cs  Event.cs  GuiPatcher.cs  LogSocketClient.cs  ProcessExtension.cs  Program.cs  ViewLocator.cs  packages.config
BepInEx.GUI.Config/: BepInEx.GUI.Config.projitems  BepInEx.GUI.Config.shproj  MainConfig.cs
BepInEx.GUI.Loader/: BepInEx.GUI.Loader.sln  nuget.config
BepInEx.GUI.Loader/src/: BepInEx.GUI.Loader.csproj  CloseProcessOnChainloaderDone.cs  Config.cs  EntryPoint.cs  Log.cs  LogPacket.cs  Patcher.cs  SendLogToClientSocket.cs
BepInEx.GUI.Patcher/: AddLogsToQueue.cs  BepInEx.GUI.Patcher.csproj  CloseGuiOnChainloaderDone.cs  LogEntry.cs  LogSocketServer.cs  Patcher.cs
BepInEx.GUI.SplashGUI/: BepInEx.GUI.SplashGUI.csproj  DynamicSplash.Designer.cs  DynamicSplash.cs  Program.cs  Splash.Designer.cs  Splash.cs
BepInEx.GUI.SplashGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
BepInEx.GUI/Models/: LogEntry.cs  Mod.cs  PathsInfo.cs  PlatformInfo.cs  TargetInfo.cs  WindowInfo.cs
BepInEx.GUI/Models/Thunderstore/: Communities.cs
BepInEx.GUI/Properties/: AssemblyInfo.cs
BepInEx.GUI/ViewModels/: ConsoleViewModel.cs  DetailedLogEntryWindowViewModel.cs  DisclaimerWindowViewModel.cs  GeneralViewModel.cs  MainWindowViewModel.cs  SettingsViewModel.cs  ViewModelBase.cs
BepInEx.GUI/Views/: ConsoleView.axaml  ConsoleView.axaml.cs  DetailedLogEntryWindow.axaml  DetailedLogEntryWindow.axaml.cs  DisclaimerWindow.axaml  DisclaimerWindow.axaml.cs  GeneralView.axaml  GeneralView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  SettingsView.axaml.cs
GraphicalUserInterface/: Form1.Designer.cs  Form1.cs  Form1.resx  GraphicalUserInterface.csproj  Program.cs
GraphicalUserInterface/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Thunderstore/: manifest.json
bepinex_gui/: Cargo.toml  build.rs
bepinex_gui/assets/: design_tokens.json
bepinex_gui/src/: app.rs  bepinex_gui.rs  bepinex_gui_config.rs  bepinex_gui_init_config.rs  bepinex_log.rs  bepinex_mod.rs  check_if_dev.rs  colors.rs  egui_utils.rs  internal_logger.rs  lib.rs  log_receiver.rs  log_receiver_thread.rs  main.rs  packet_protocol.rs  panic_handler.rs  path_utils.rs  paths.rs  settings.rs  theme.rs  thunderstore_communities.rs
bepinex_gui/src/backend/: file_explorer_utils.rs  mod.rs  panic_handler.rs  reset_app_if_window_hang.rs
bepinex_gui/src/backend/network/: mod.rs  packet_protocol.rs
bepinex_gui/src/backend/process/: mod.rs
bepinex_gui/src/backend/thunderstore/: api.rs
bepinex_gui/src/backend/window/: mod.rs  window_topmost_on_target_start.rs
bepinex_gui/src/bepinex_gui/: packet_protocol.rs
bepinex_gui/src/bepinex_log/: file.rs  mod.rs  receiver.rs
bepinex_gui/src/config/: launch.rs  mod.rs
bepinex_gui/src/data/: bepinex_mod.rs  mod.rs
bepinex_gui/src/data/bepinex_log/: file.rs  mod.rs  receiver.rs
bepinex_gui/src/logger/: mod.rs
bepinex_gui/src/process/: mod.rs
bepinex_gui/src/tab/: console_tab.rs  general_tab.rs  mod.rs  settings_tab.rs
bepinex_gui/src/thunderstore/: api.rs
bepinex_gui/src/views/: components.rs  disclaimer.rs  mod.rs
bepinex_gui/src/views/tabs/: console.rs  general.rs  mod.rs  settings.rs
bepinex_gui/src/views/utils/egui/: mod.rs
bepinex_gui/src/window/: window_topmost_on_target_start.rs
